cambio background-color body

--- a/convBits.html
+++ b/convBits.html
@@ -5,7 +5,7 @@
   <style type="text/css">
     body
     {
-      background-color:#ff8000;
+      background-color:#3eaeb1;
       font-size:20px;
       font-family:"helvetica";
     }
