cambios - contenedores centrados

--- a/convBits.html
+++ b/convBits.html
@@ -9,13 +9,23 @@
       font-size:20px;
       font-family:"helvetica";
     }
+    #titulo{
+      margin:auto;
+      text-align:center;
+      color: antiquewhite;
+    }
+    #tabla{
+      margin:auto;
+      background-color: #ff8000;
+    }
+    
     </style>
   <title>Calculadora Binaria</title>
   </head>
   <body>
 
-    <h1>Calculadora binaria</h1>
-    <table>
+    <h1 id="titulo">Calculadora binaria</h1>
+    <table id="tabla"> 
       <theader>
       <tr>
       <th>Introduzca el número <strong><br>DECIMAL:</br></strong></th>
